tests/specs/ecosystem/grud/devtools/0_3_1.test
grud/devtools/0.3.1
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/types/common.ts:15:14
   | 
15 | export const ISODateString = (date: string) => {
   |              ^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/grud-intl.ts:272:14
    | 
272 | export const getLanguage = (locale: Locale | Language) =>
    |              ^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/grud-intl.ts:274:14
    | 
274 | export const getCountry = (locale: Locale) => splitLocale(locale)[1];
    |              ^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/getDisplayValue.ts:93:5
    | 
 93 |     (
    |     ^
 94 |       userLang?: Langtag // Numbers and dates are formatted for this langtag
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 95 |       // If undefined, numbers and dates are formatted per langtag
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 96 |     ) => {
    | ^^^^^^^^^^
 97 |       // cache fns
    | ^^^^^^^^^^^^^^^^^^
 98 |       const getNestedValues = (columns: Column[], values: CellValue[]) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 99 |         return joinMultilangValues(
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
100 |           langs,
    | ^^^^^^^^^^^^^^^^
101 |           fp.flatten(map((col, val) => go(col, val), columns, values))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
102 |         );
    | ^^^^^^^^^^
103 |       };
    | ^^^^^^^^
104 | 
    | 
105 |       const getConcatValue: getValueT<ConcatColumn> = (column, values) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
106 |         getNestedValues(column.concats, values as any);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
107 |       const getGroupValue: getValueT<GroupColumn> = (column, values) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
108 |         getNestedValues(column.groups, values as any);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
109 | 
    | 
110 |       const getAttachmentValues: getValueT<AttachmentColumn> = (_, value) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
111 |         (value as unknown as AttachmentCellValue["value"]).map(
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
112 |           attachmentToMultilang(langs)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
113 |         );
    | ^^^^^^^^^^
114 | 
    | 
115 |       const getBooleanValue: getValueT<BooleanColumn> = (column, value) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
116 |         const formatBooleanVal = (lt: Langtag, val: boolean) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
117 |           val ? column.displayName[lt] ?? column.name : "";
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
118 |         return mkDisplayMap(langs, column, value, formatBooleanVal);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
119 |       };
    | ^^^^^^^^
120 |       const getCurrencyValue: getValueT<CurrencyColumn> = (column, value) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
121 |         const formatCurrency = (lt: Langtag, val: number) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
122 |           i.formatCurrency(userLang ?? lt, i.getCurrency(lt), val);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
123 |         return mkDisplayMap(langs, column, value, formatCurrency);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
124 |       };
    | ^^^^^^^^
125 |       const getNumberValue: getValueT<NumberColumn> = (column, value) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
126 |         const formatNumber = (lt: Langtag, val: number) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
127 |           i.formatNumber(userLang ?? lt, val);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
128 |         return mkDisplayMap(langs, column, value, formatNumber);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
129 |       };
    | ^^^^^^^^
130 |       const getPlainValue: getValueT<Column> = (column, value) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
131 |         mkDisplayMap(langs, column, value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
132 | 
    | 
133 |       const getDateValue: getValueT<DateColumn> = (column, value) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
134 |         const formatDate = (lt: Langtag, val: string) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
135 |           i.formatDate(userLang ?? lt, val);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
136 |         return mkDisplayMap(langs, column, value, formatDate);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
137 |       };
    | ^^^^^^^^
138 |       const getDateTimeValue: getValueT<DateTimeColumn> = (column, value) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
139 |         const formatDateTime = (lt: Langtag, val: string) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
140 |           i.formatDateTime(userLang ?? lt, val);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
141 |         return mkDisplayMap(langs, column, value, formatDateTime);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
142 |       };
    | ^^^^^^^^
143 |       const getLinkValue: getValueT<LinkColumn> = (column, value) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
144 |         value.map((v) =>
    | ^^^^^^^^^^^^^^^^^^^^^^^^
145 |           getDisplayValue(langs)(userLang)(column.toColumn as any, v)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
146 |         );
    | ^^^^^^^^^^
147 |       const getStatusValue: getValueT<StatusColumn> = (column, value) => {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
148 |         const statusValues = column.rules
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
149 |           .filter((_, idx) => !!value[idx])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
150 |           .map(fp.prop("displayName")) as MultilangValue<string>[];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
151 |         return joinMultilangValues(langs, statusValues);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
152 |       };
    | ^^^^^^^^
153 | 
    | 
154 |       // Optionally curried  Column -> CellValue -> MultilangValue<string>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
155 |       // or uncurried        (Column, CellValue) -> MultilangValue<string>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
156 |       function go<T extends Column>(
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
157 |         column: T,
    | ^^^^^^^^^^^^^^^^^^
158 |         cellValue: CellValueForColumn<T>["value"] | CellValueForColumn<T>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
159 |       ): DisplayValueForColumn<T>;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
160 |       function go<T extends Column>(
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
161 |         _: T
    | ^^^^^^^^^^^^
162 |       ): (
    | ^^^^^^^^^^
163 |         _: CellValueForColumn<T>["value"] | CellValueForColumn<T>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
164 |       ) => DisplayValueForColumn<T>;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
165 |       function go<T extends Column>(
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
166 |         column: T,
    | ^^^^^^^^^^^^^^^^^^
167 |         cellValue?: CellValueForColumn<T>["value"] | CellValueForColumn<T>
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
168 |       ) {
    | ^^^^^^^^^
169 |         if (arguments.length < 2)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
170 |           return (value: CellValueForColumn<T>["value"]) => go(column, value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
171 |         try {
    | ^^^^^^^^^^^^^
172 |           const fn = condSelect<Column, getValueT<any>>([
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
173 |             [isAttachmentColumn, getAttachmentValues],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
174 |             [isBooleanColumn, getBooleanValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
175 |             [isConcatColumn, getConcatValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
176 |             [isCurrencyColumn, getCurrencyValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
177 |             [isDateColumn, getDateValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
178 |             [isDateTimeColumn, getDateTimeValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
179 |             [isGroupColumn, getGroupValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
180 |             [isLinkColumn, getLinkValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
181 |             [isNumberColumn, getNumberValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
182 |             [isRichtextColumn, getPlainValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
183 |             [isShorttextColumn, getPlainValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
184 |             [isStatusColumn, getStatusValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
185 |             [isTextColumn, getPlainValue],
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
186 |           ])(column);
    | ^^^^^^^^^^^^^^^^^^^^^
187 | 
    | 
188 |           return cellValue !== undefined && cellValue !== null
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
189 |             ? fn(column, (cellValue as CellValue).value ?? cellValue)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
190 |             : ({} as any);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
191 |         } catch (err) {
    | ^^^^^^^^^^^^^^^^^^^^^^^
192 |           if (/Non exhaustive/.test((err as Error).message))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
193 |             console.error("Column kind not found:", column.kind);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
194 |           throw err;
    | ^^^^^^^^^^^^^^^^^^^^
195 |         }
    | ^^^^^^^^^
196 |       }
    | ^^^^^^^
197 | 
    | 
198 |       return go;
    | ^^^^^^^^^^^^^^^^
199 |     };
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/tools.ts:21:14
   | 
21 | export const map = <Fn extends (..._: any[]) => any>(
   |              ^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/tools.ts:32:14
   | 
32 | export const joinMultilangValues = (
   |              ^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


